--- a/index.html
+++ b/index.html
@@ -483,14 +483,14 @@
     <h2 class="text-center mb-5" style="font-family:'Playfair Display', serif;">Paquetes Premium</h2>
     <div class="row g-4 justify-content-center">
       <!-- Paquete 50 -->
-      <div class="col-md-6 col-lg-5">
+      <div class="col-md-6 col-lg-4">
         <div class="card shadow-lg rounded-4 overflow-hidden">
           <div class="position-relative">
             <img src="img/50.png" class="card-img-top" alt="Paquete 50" style="height:260px;object-fit:cover;">
             <div class="badge bg-info text-white position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">50 pax</div>
             <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#0dcaf0,#0bb3d6);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Familiar</div>
           </div>
-          <div class="card-body">
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">Paquete Familiar — 50 personas</h5>
             <p class="text-muted">Renta 6 hrs · Asadores · Mobiliario · Iluminación básica</p>
             <div class="d-flex justify-content-between align-items-center mt-3">
@@ -500,7 +500,7 @@
               </div>
               <div>
                 <button class="btn btn-outline-secondary me-2" data-bs-toggle="modal" data-bs-target="#detalle50">Ver detalles</button>
-                <a href="https://wa.me/523312345678?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%2050%20personas." target="_blank" class="btn btn-info text-white">Cotizar</a>
+                <a href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%2050%20personas." target="_blank" class="btn btn-info text-white">Cotizar</a>
               </div>
             </div>
           </div>
@@ -508,14 +508,14 @@
       </div>
 
       <!-- Paquete 100 -->
-      <div class="col-md-6 col-lg-5">
+      <div class="col-md-6 col-lg-4">
         <div class="card shadow-lg rounded-4 overflow-hidden">
           <div class="position-relative">
             <img src="img/100.png" class="card-img-top" alt="Paquete 100" style="height:260px;object-fit:cover;">
             <div class="badge bg-success text-white position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">100 pax</div>
             <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#28a745,#1f8a37);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Estándar</div>
           </div>
-          <div class="card-body">
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">Paquete Estándar — 100 personas</h5>
             <p class="text-muted">Renta 8 hrs · Mobiliario completo · Iluminación y sonido · Coordinador</p>
             <div class="d-flex justify-content-between align-items-center mt-3">
@@ -525,82 +525,167 @@
               </div>
               <div>
                 <button class="btn btn-outline-secondary me-2" data-bs-toggle="modal" data-bs-target="#detalle100">Ver detalles</button>
-                <a href="https://wa.me/523312345678?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20100%20personas." target="_blank" class="btn btn-success text-white">Cotizar</a>
+                <a href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20100%20personas." target="_blank" class="btn btn-success text-white">Cotizar</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- Modales de detalle -->
-    <div class="modal fade" id="detalle50" tabindex="-1" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content rounded-4">
-          <div class="modal-header">
-            <h5 class="modal-title">Detalle — Paquete 50 personas</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      <!-- Paquete 200 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow-lg rounded-4 overflow-hidden">
+          <div class="position-relative">
+            <img src="img/200.png" class="card-img-top" alt="Paquete 200" style="height:260px;object-fit:cover;">
+            <div class="badge bg-warning text-dark position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">200 pax</div>
+            <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#f6c23e,#e09b00);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Grande</div>
           </div>
-          <div class="modal-body">
-            <ul>
-              <li>Renta por 6 horas</li>
-              <li>5 mesas redondas, 50 sillas, mantelería</li>
-              <li>Asadores y barra</li>
-              <li>Iluminación básica y limpieza</li>
-              <li>Sesión de fotos (opcional)</li>
-            </ul>
-            <p class="mb-0">Anticipo 30% para apartar fecha. Horas extra con cargo adicional.</p>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Paquete Grande — 200 personas</h5>
+            <p class="text-muted">Renta 10 hrs · 20 mesas · Equipo de sonido · Área extra para banquetes</p>
+            <div class="d-flex justify-content-between align-items-center mt-3">
+              <div>
+                <div class="fs-4 fw-bold text-warning">$X,XXX</div>
+                <small class="text-muted">Precio orientativo</small>
+              </div>
+              <div>
+                <button class="btn btn-outline-secondary me-2" data-bs-toggle="modal" data-bs-target="#detalle200">Ver detalles</button>
+                <a href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20200%20personas." target="_blank" class="btn btn-warning text-white">Cotizar</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="modal fade" id="detalle100" tabindex="-1" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content rounded-4">
-          <div class="modal-header">
-            <h5 class="modal-title">Detalle — Paquete 100 personas</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      <!-- Paquete 300 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow-lg rounded-4 overflow-hidden">
+          <div class="position-relative">
+            <img src="img/300.png" class="card-img-top" alt="Paquete 300" style="height:260px;object-fit:cover;">
+            <div class="badge bg-danger text-white position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">300 pax</div>
+            <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#dc3545,#b02a37);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Evento</div>
           </div>
-          <div class="modal-body">
-            <ul>
-              <li>Renta por 8 horas</li>
-              <li>10 mesas, 100 sillas, mantelería y cristalería</li>
-              <li>Iluminación y sonido profesional</li>
-              <li>Coordinador el día del evento</li>
-              <li>Personal de limpieza y seguridad</li>
-            </ul>
-            <p class="mb-0">Anticipo 30%, tarifas especiales para banquete y decoración premium.</p>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Paquete Evento — 300 personas</h5>
+            <p class="text-muted">Renta 10 hrs · Escenario · Sonido potente · Staff completo</p>
+            <div class="d-flex justify-content-between align-items-center mt-3">
+              <div>
+                <div class="fs-4 fw-bold text-danger">$X,XXX</div>
+                <small class="text-muted">Precio orientativo</small>
+              </div>
+              <div>
+                <button class="btn btn-outline-secondary me-2" data-bs-toggle="modal" data-bs-target="#detalle300">Ver detalles</button>
+                <a href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20300%20personas." target="_blank" class="btn btn-danger text-white">Cotizar</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
+      <!-- Paquete 400 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow-lg rounded-4 overflow-hidden">
+          <div class="position-relative">
+            <img src="img/400.png" class="card-img-top" alt="Paquete 400" style="height:260px;object-fit:cover;">
+            <div class="badge bg-primary text-white position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">400 pax</div>
+            <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#0d6efd,#025ce6);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Extra</div>
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Paquete Extra — 400 personas</h5>
+            <p class="text-muted">Renta 12 hrs · Escenario grande · Staff y catering opcional</p>
+            <div class="d-flex justify-content-between align-items-center mt-3">
+              <div>
+                <div class="fs-4 fw-bold text-primary">$X,XXX</div>
+                <small class="text-muted">Precio orientativo</small>
+              </div>
+              <div>
+                <button class="btn btn-outline-secondary me-2" data-bs-toggle="modal" data-bs-target="#detalle400">Ver detalles</button>
+                <a href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20400%20personas." target="_blank" class="btn btn-primary text-white">Cotizar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Paquete 500 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card shadow-lg rounded-4 overflow-hidden">
+          <div class="position-relative">
+            <img src="img/500.png" class="card-img-top" alt="Paquete 500" style="height:260px;object-fit:cover;">
+            <div class="badge bg-dark text-white position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">500 pax</div>
+            <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#343a40,#1f2a32);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Gran Evento</div>
+          </div>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Paquete Gran Evento — 500 personas</h5>
+            <p class="text-muted">Renta 12 hrs · Escenario completo · Coordinación y staff total</p>
+            <div class="d-flex justify-content-between align-items-center mt-3">
+              <div>
+                <div class="fs-4 fw-bold text-dark">$X,XXX</div>
+                <small class="text-muted">Precio orientativo</small>
+              </div>
+              <div>
+                <button class="btn btn-outline-secondary me-2" data-bs-toggle="modal" data-bs-target="#detalle500">Ver detalles</button>
+                <a href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20500%20personas." target="_blank" class="btn btn-dark text-white">Cotizar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Paquete personalizado -->
+      <div class="col-12 text-center mt-2">
+        <div class="d-inline-block">
+          <button class="btn btn-outline-primary me-2" id="btn-custom-package" data-bs-toggle="modal" data-bs-target="#modalCustom">Paquete Personalizado</button>
+          <a href="https://wa.me/524271522854?text=Hola,%20quiero%20una%20cotización%20personalizada." target="_blank" class="btn btn-primary">Cotizar por WhatsApp</a>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+
+<!-- Modal para paquete personalizado -->
+<div class="modal fade" id="modalCustom" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title">Paquete Personalizado</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <p>Indica el número aproximado de personas y servicios que deseas. Te enviaremos una cotización personalizada por WhatsApp.</p>
+        <div class="mb-3">
+          <label for="custom-count" class="form-label">Número de personas</label>
+          <input type="number" id="custom-count" class="form-control" placeholder="Ej. 75">
+        </div>
+        <div class="mb-3">
+          <label for="custom-details" class="form-label">Detalles / servicios</label>
+          <textarea id="custom-details" class="form-control" rows="3" placeholder="Ej. banquete, música, decoración"></textarea>
+        </div>
+        <div class="text-end">
+          <button type="button" id="sendCustom" class="btn btn-success">Enviar por WhatsApp</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <script>
-  
-  const botones = document.querySelectorAll('.filtro');
-  const items = document.querySelectorAll('.galeria-item');
-
-  botones.forEach(boton => {
-    boton.addEventListener('click', () => {
-      // Quitar clase activa de todos los botones
-      botones.forEach(btn => btn.classList.remove('activo'));
-      boton.classList.add('activo');
-
-      const categoria = boton.getAttribute('data-filter');
-
-      items.forEach(item => {
-        if (categoria === 'todos' || item.classList.contains(categoria)) {
-          item.style.display = 'block';
-        } else {
-          item.style.display = 'none';
-        }
-      });
+  // Manejo del modal personalizado (usa el número 524271522854)
+  document.addEventListener('DOMContentLoaded', () => {
+    const sendBtn = document.getElementById('sendCustom');
+    if (!sendBtn) return;
+    sendBtn.addEventListener('click', () => {
+      const count = document.getElementById('custom-count').value.trim();
+      const details = document.getElementById('custom-details').value.trim();
+      let msg = 'Hola, quiero una cotización personalizada';
+      if (count) msg += `. Personas: ${count}`;
+      if (details) msg += `. Detalles: ${details}`;
+      const wa = `https://wa.me/524271522854?text=${encodeURIComponent(msg)}`;
+      window.open(wa, '_blank');
+      // cerrar modal bootstrap
+      const modal = bootstrap.Modal.getInstance(document.getElementById('modalCustom'));
+      if (modal) modal.hide();
     });
   });
-
 </script>
     <!-- Reemplaza la sección del footer por este bloque -->
 <footer id="contacto" class="footer-modern py-5">
