--- a/index.html
+++ b/index.html
@@ -437,6 +437,29 @@
   </div>
 </div>
 <div class="galeria-item eventos">
+  <div id="carouselOtraBoda" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <video class="d-block w-100" muted playsinline loop preload="metadata">
+          <source src="img/boda2.mp4" type="video/mp4">
+          Tu navegador no soporta video.
+        </video>
+      </div>
+      
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselOtraBoda" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselOtraBoda" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+  <div class="overlay">
+    <h3>Boda</h3>
+    <p>Celebración reciente en la finca — ambientación, decoración y montaje</p>
+  </div>
+</div>
+<div class="galeria-item eventos">
         <video controls width="100%" playsinline>
           <source src="img/nutri.mp4" type="video/mp4">
           Tu navegador no soporta el video.
@@ -492,10 +515,10 @@
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Paquete Familiar — 50 personas</h5>
-            <p class="text-muted">Renta 6 hrs · Asadores · Mobiliario · Iluminación básica</p>
+            <p class="text-muted">Renta 12 hrs · Mobiliario completo ·</p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <div>
-                <div class="fs-4 fw-bold text-info">$X,XXX</div>
+                <div class="fs-4 fw-bold text-info">$5,000</div>
                 <small class="text-muted">Precio orientativo</small>
               </div>
               <div>
@@ -517,10 +540,10 @@
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Paquete Estándar — 100 personas</h5>
-            <p class="text-muted">Renta 8 hrs · Mobiliario completo · Iluminación y sonido · Coordinador</p>
+            <p class="text-muted">Renta 12 hrs · Mobiliario completo · Hornos · Palapa</p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <div>
-                <div class="fs-4 fw-bold text-success">$X,XXX</div>
+                <div class="fs-4 fw-bold text-success">$10,000</div>
                 <small class="text-muted">Precio orientativo</small>
               </div>
               <div>
@@ -536,16 +559,16 @@
       <div class="col-md-6 col-lg-4">
         <div class="card shadow-lg rounded-4 overflow-hidden">
           <div class="position-relative">
-            <img src="img/200.png" class="card-img-top" alt="Paquete 200" style="height:260px;object-fit:cover;">
+            <img src="img/200.jpg" class="card-img-top" alt="Paquete 200" style="height:260px;object-fit:cover;">
             <div class="badge bg-warning text-dark position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">200 pax</div>
             <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#f6c23e,#e09b00);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Grande</div>
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Paquete Grande — 200 personas</h5>
-            <p class="text-muted">Renta 10 hrs · 20 mesas · Equipo de sonido · Área extra para banquetes</p>
+            <p class="text-muted">Renta 12 hrs · 20 mesas · Mobiliario completo · Hornos · Palapa</p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <div>
-                <div class="fs-4 fw-bold text-warning">$X,XXX</div>
+                <div class="fs-4 fw-bold text-warning">$19,500</div>
                 <small class="text-muted">Precio orientativo</small>
               </div>
               <div>
@@ -561,16 +584,16 @@
       <div class="col-md-6 col-lg-4">
         <div class="card shadow-lg rounded-4 overflow-hidden">
           <div class="position-relative">
-            <img src="img/300.png" class="card-img-top" alt="Paquete 300" style="height:260px;object-fit:cover;">
+            <img src="img/300.jpg" class="card-img-top" alt="Paquete 300" style="height:260px;object-fit:cover;">
             <div class="badge bg-danger text-white position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">300 pax</div>
             <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#dc3545,#b02a37);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Evento</div>
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Paquete Evento — 300 personas</h5>
-            <p class="text-muted">Renta 10 hrs · Escenario · Sonido potente · Staff completo</p>
+            <p class="text-muted">Renta 12 hrs · Mobiliario completo · Hornos · Palapa</p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <div>
-                <div class="fs-4 fw-bold text-danger">$X,XXX</div>
+                <div class="fs-4 fw-bold text-danger">$29,500</div>
                 <small class="text-muted">Precio orientativo</small>
               </div>
               <div>
@@ -592,10 +615,10 @@
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Paquete Extra — 400 personas</h5>
-            <p class="text-muted">Renta 12 hrs · Escenario grande · Staff y catering opcional</p>
+            <p class="text-muted">Renta 12 hrs · Mobiliario completo · Hornos · Palapa</p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <div>
-                <div class="fs-4 fw-bold text-primary">$X,XXX</div>
+                <div class="fs-4 fw-bold text-primary">$39,500</div>
                 <small class="text-muted">Precio orientativo</small>
               </div>
               <div>
@@ -617,10 +640,10 @@
           </div>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Paquete Gran Evento — 500 personas</h5>
-            <p class="text-muted">Renta 12 hrs · Escenario completo · Coordinación y staff total</p>
+            <p class="text-muted">Renta 12 hrs · Mobiliario completo · Hornos · Palapa</p>
             <div class="d-flex justify-content-between align-items-center mt-3">
               <div>
-                <div class="fs-4 fw-bold text-dark">$X,XXX</div>
+                <div class="fs-4 fw-bold text-dark">$49,500</div>
                 <small class="text-muted">Precio orientativo</small>
               </div>
               <div>
@@ -863,3 +886,155 @@ document.addEventListener('DOMContentLoaded', () => {
   <script src="page/chat.js"></script>
 </body>
 </html>
+
+<!-- Modales individuales para "Ver detalles" de cada paquete -->
+<!-- Detalle 50 -->
+<div class="modal fade" id="detalle50" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title">Paquete Familiar — 50 personas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-unstyled mb-3">
+          <li>Renta: 6 hrs</li>
+          <li>Mesas: 5</li>
+          <li>Sillas: 50</li>
+          <li>Extras: Asadores, iluminación básica, limpieza básica</li>
+        </ul>
+        <p class="fw-bold mb-0">Precio orientativo: Consultar</p>
+      </div>
+      <div class="modal-footer">
+        <a class="btn btn-success" target="_blank" rel="noopener" href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%2050%20personas.">Cotizar por WhatsApp</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Detalle 100 -->
+<div class="modal fade" id="detalle100" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title">Paquete Estándar — 100 personas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-unstyled mb-3">
+          <li>Renta: 12 hrs</li>
+          <li>Mesas: 10</li>
+          <li>Sillas: 100</li>
+          <li>Extras: Mobiliario completo, hornos, palapa, coordinador</li>
+        </ul>
+        <p class="fw-bold mb-0">Precio orientativo: $10,000</p>
+      </div>
+      <div class="modal-footer">
+        <a class="btn btn-success" target="_blank" rel="noopener" href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20100%20personas.">Cotizar por WhatsApp</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Detalle 200 -->
+<div class="modal fade" id="detalle200" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title">Paquete Grande — 200 personas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-unstyled mb-3">
+          <li>Renta: 12 hrs</li>
+          <li>Mesas: 20</li>
+          <li>Sillas: 200</li>
+          <li>Extras: Mobiliario completo, hornos, palapa, área para banquetes</li>
+        </ul>
+        <p class="fw-bold mb-0">Precio orientativo: $19,500</p>
+      </div>
+      <div class="modal-footer">
+        <a class="btn btn-success" target="_blank" rel="noopener" href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20200%20personas.">Cotizar por WhatsApp</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Detalle 300 -->
+<div class="modal fade" id="detalle300" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title">Paquete Evento — 300 personas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-unstyled mb-3">
+          <li>Renta: 12 hrs</li>
+          <li>Mesas: 30</li>
+          <li>Sillas: 300</li>
+          <li>Extras: Escenario, sonido profesional, staff completo</li>
+        </ul>
+        <p class="fw-bold mb-0">Precio orientativo: $29,500</p>
+      </div>
+      <div class="modal-footer">
+        <a class="btn btn-success" target="_blank" rel="noopener" href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20300%20personas.">Cotizar por WhatsApp</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Detalle 400 -->
+<div class="modal fade" id="detalle400" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title">Paquete Extra — 400 personas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-unstyled mb-3">
+          <li>Renta: 12 hrs</li>
+          <li>Mesas: 40</li>
+          <li>Sillas: 400</li>
+          <li>Extras: Escenario grande, staff y catering opcional</li>
+        </ul>
+        <p class="fw-bold mb-0">Precio orientativo: $39,500</p>
+      </div>
+      <div class="modal-footer">
+        <a class="btn btn-success" target="_blank" rel="noopener" href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20400%20personas.">Cotizar por WhatsApp</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Detalle 500 -->
+<div class="modal fade" id="detalle500" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title">Paquete Gran Evento — 500 personas</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-unstyled mb-3">
+          <li>Renta: 12 hrs</li>
+          <li>Mesas: 50</li>
+          <li>Sillas: 500</li>
+          <li>Extras: Coordinación completa, staff y logística</li>
+        </ul>
+        <p class="fw-bold mb-0">Precio orientativo: $49,500</p>
+      </div>
+      <div class="modal-footer">
+        <a class="btn btn-success" target="_blank" rel="noopener" href="https://wa.me/524271522854?text=Hola,%20quiero%20cotizar%20el%20paquete%20para%20500%20personas.">Cotizar por WhatsApp</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modales individuales: fin -->
