--- a/index.html
+++ b/index.html
@@ -420,7 +420,12 @@
       <div class="carousel-item">
         <img src="img/s2.jpeg" class="d-block w-100" alt="Sesión de Fotos 2">
       </div>
-      
+      <div class="carousel-item">
+        <img src="img/se.jpg" class="d-block w-100" alt="Sesión de Fotos 2">
+      </div>
+      <div class="carousel-item">
+        <img src="img/fott.jpg" class="d-block w-100" alt="Sesión de Fotos 2">
+      </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselSesionFotos" data-bs-slide="prev">
       <span class="carousel-control-prev-icon"></span>
@@ -437,26 +442,28 @@
   </div>
 </div>
 <div class="galeria-item eventos">
-  <div id="carouselOtraBoda" class="carousel slide" data-bs-ride="carousel">
+  <div id="carouselBodaA" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <video class="d-block w-100" muted playsinline loop preload="metadata">
-          <source src="img/boda2.mp4" type="video/mp4">
-          Tu navegador no soporta video.
-        </video>
+        <img src="img/bodaa.jpg" class="d-block w-100" alt="Boda - Foto 1">
       </div>
-      
+      <div class="carousel-item">
+        <img src="img/bodaa1.jpg" class="d-block w-100" alt="Boda - Foto 2">
+      </div>
+      <div class="carousel-item">
+        <img src="img/bodaa2.jpg" class="d-block w-100" alt="Boda - Foto 3">
+      </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselOtraBoda" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselBodaA" data-bs-slide="prev">
       <span class="carousel-control-prev-icon"></span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselOtraBoda" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselBodaA" data-bs-slide="next">
       <span class="carousel-control-next-icon"></span>
     </button>
   </div>
   <div class="overlay">
     <h3>Boda</h3>
-    <p>Celebración reciente en la finca — ambientación, decoración y montaje</p>
+    <p>Momentos destacados de una boda reciente en la finca.</p>
   </div>
 </div>
 <div class="galeria-item eventos">
@@ -469,6 +476,17 @@
           <p>Talleres y charlas sobre alimentación saludable, recetas y consejos prácticos para toda la familia.</p>
         </div>
       </div>
+
+<div class="galeria-item eventos">
+  <video controls width="100%" playsinline>
+    <source src="img/boda2.mp4" type="video/mp4">
+    Tu navegador no soporta el video.
+  </video>
+  <div class="overlay">
+    <h3>Boda</h3>
+    <p>Recuerdos del evento: ambientación, ceremonia y montaje.</p>
+  </div>
+</div>
 <!-- Video Chuponcito -->
   <div class="galeria-item artistas">
     <video controls width="100%">
@@ -584,7 +602,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="card shadow-lg rounded-4 overflow-hidden">
           <div class="position-relative">
-            <img src="img/300.jpg" class="card-img-top" alt="Paquete 300" style="height:260px;object-fit:cover;">
+            <img src="img/300.png" class="card-img-top" alt="Paquete 300" style="height:260px;object-fit:cover;">
             <div class="badge bg-danger text-white position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">300 pax</div>
             <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#dc3545,#b02a37);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Evento</div>
           </div>
@@ -609,7 +627,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="card shadow-lg rounded-4 overflow-hidden">
           <div class="position-relative">
-            <img src="img/400.png" class="card-img-top" alt="Paquete 400" style="height:260px;object-fit:cover;">
+            <img src="img/400.jpg" class="card-img-top" alt="Paquete 400" style="height:260px;object-fit:cover;">
             <div class="badge bg-primary text-white position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">400 pax</div>
             <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#0d6efd,#025ce6);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Extra</div>
           </div>
@@ -634,7 +652,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="card shadow-lg rounded-4 overflow-hidden">
           <div class="position-relative">
-            <img src="img/500.png" class="card-img-top" alt="Paquete 500" style="height:260px;object-fit:cover;">
+            <img src="img/500.jpg" class="card-img-top" alt="Paquete 500" style="height:260px;object-fit:cover;">
             <div class="badge bg-dark text-white position-absolute" style="top:16px;left:16px;padding:8px 14px;border-radius:999px;font-weight:600;">500 pax</div>
             <div class="ribbon" style="position:absolute;right:0;top:18px;background:linear-gradient(90deg,#343a40,#1f2a32);color:#fff;padding:8px 18px;border-radius:6px 0 0 6px;font-weight:600;">Gran Evento</div>
           </div>
@@ -781,9 +799,9 @@
             <span>Instagram</span>
           </a>
 
-          <a href="https://maps.app.goo.gl/dURT7QQNuvYVDsvs6?g_st=aw" target="_blank" class="social-item maps">
-            <i class="bi bi-map-fill"></i>
-            <span>Mapa</span>
+          <a href="https://www.airbnb.mx/rooms/1188606272569020722?viralityEntryPoint=1&s=76" target="_blank" class="social-item airbnb" rel="noopener">
+            <i class="bi bi-house-fill"></i>
+            <span>Airbnb</span>
           </a>
         </div>
 
@@ -879,8 +897,14 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 </script>
-  <!-- Botón para abrir el chat (visible) -->
-  <button id="abrirChatBtn" class="potrillos-chat-toggle" aria-label="Abrir chat">💬</button>
+  <!-- Toggle de chat: video circular -->
+  <button id="abrirChatBtn" class="potrillos-chat-toggle" aria-label="Abrir chat" type="button">
+    <video id="potrillos-toggle-video" autoplay muted loop playsinline preload="metadata" aria-hidden="true">
+      <source src="img/chatv.mp4" type="video/mp4">
+      <!-- Si no hay video, muestra emoji/texto -->
+      <!-- Tu navegador no soporta video -->
+    </video>
+  </button>
 
   <!-- Carga del script del chatbot -->
   <script src="page/chat.js"></script>
