--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
 
     <div class="footer-bottom">
       <p class="mb-0">&copy; 2023 Finca los 6 potrillos</p>
-      <p class="mb-0">Desarrollado por <a href="https://www.instagram.com/moren0_nancy/" target="_blank">@moren0_nancy</a></p>
+      <p class="mb-0"> <a href="https://wa.me/524273787543" target="_blank" rel="noopener">Desarrollado por</a></p>
     </div>
   </div>
 </footer>
@@ -922,10 +922,10 @@ document.addEventListener('DOMContentLoaded', () => {
       </div>
       <div class="modal-body">
         <ul class="list-unstyled mb-3">
-          <li>Renta: 6 hrs</li>
+          <li>Renta: 12 hrs</li>
           <li>Mesas: 5</li>
           <li>Sillas: 50</li>
-          <li>Extras: Asadores, iluminación básica, limpieza básica</li>
+          <li>Extras: Mobiliario completo, hornos, palapa</li>
         </ul>
         <p class="fw-bold mb-0">Precio orientativo: Consultar</p>
       </div>
@@ -950,7 +950,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <li>Renta: 12 hrs</li>
           <li>Mesas: 10</li>
           <li>Sillas: 100</li>
-          <li>Extras: Mobiliario completo, hornos, palapa, coordinador</li>
+          <li>Extras: Mobiliario completo, hornos, palapa</li>
         </ul>
         <p class="fw-bold mb-0">Precio orientativo: $10,000</p>
       </div>
@@ -1000,7 +1000,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <li>Renta: 12 hrs</li>
           <li>Mesas: 30</li>
           <li>Sillas: 300</li>
-          <li>Extras: Escenario, sonido profesional, staff completo</li>
+          <li>Extras: Mobiliario completo, hornos, palapa</li>
         </ul>
         <p class="fw-bold mb-0">Precio orientativo: $29,500</p>
       </div>
@@ -1025,7 +1025,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <li>Renta: 12 hrs</li>
           <li>Mesas: 40</li>
           <li>Sillas: 400</li>
-          <li>Extras: Escenario grande, staff y catering opcional</li>
+          <li>Extras: Mobiliario completo, hornos, palapa</li>
         </ul>
         <p class="fw-bold mb-0">Precio orientativo: $39,500</p>
       </div>
@@ -1050,7 +1050,7 @@ document.addEventListener('DOMContentLoaded', () => {
           <li>Renta: 12 hrs</li>
           <li>Mesas: 50</li>
           <li>Sillas: 500</li>
-          <li>Extras: Coordinación completa, staff y logística</li>
+          <li>Extras: Mobiliario completo, hornos, palapa, capilla, ruedo, barra</li>
         </ul>
         <p class="fw-bold mb-0">Precio orientativo: $49,500</p>
       </div>
