--- a/index.html
+++ b/index.html
@@ -69,33 +69,37 @@
 
     
     <section id="quienes-somos" class="quienes-somos">
-        <div class="container d-flex align-items-center justify-content-between">
-            <div class="text-content" style="flex: 1; padding-right: 20px;">
-                <h2>Acerca de nosotros</h2>
-                <p>
-                    En Finca Los 6 Potrillos nos distinguimos por 
-                    ofrecer un espacio exclusivo donde 
-                     el confort y la elegancia se combinan para dar 
-                     vida a eventos inolvidables. Nuestro propósito 
-                     es brindarle a cada cliente una experiencia única,
-                      en un entorno que inspira tranquilidad y armonía.
-                </p>
-                <p>
-                    Nuestras instalaciones pueden adaptarse a todo 
-                    tipo de celebraciones: 
-                    desde bodas y aniversarios, hasta reuniones familiares,
-                     corporativas y eventos sociales. Rodeada de paisajes 
-                     inigualables, Finca Los 6 Potrillos ofrece un ambiente 
-                     natural y sofisticado que convierte cada momento en
-                      algo especial.
-                </p>
-            </div>
-            <div class="image-content" style="flex: 1; text-align: right;">
-    <img src="img/ac.jpg" alt="Acerca de nosotros" class="img-acerca">
-</div>
+  <div class="container">
+    <!-- título separado para controlar el orden en móvil -->
+    <h2 class="qs-title">Acerca de nosotros</h2>
 
-        </div>
-    </section>
+    <div class="qs-content d-flex align-items-center justify-content-between">
+      <div class="image-content">
+        <img src="img/ac.jpg" alt="Acerca de nosotros" class="img-acerca">
+      </div>
+
+      <div class="text-content">
+        <p>
+          En Finca Los 6 Potrillos nos distinguimos por 
+          ofrecer un espacio exclusivo donde 
+          el confort y la elegancia se combinan para dar 
+          vida a eventos inolvidables. Nuestro propósito 
+          es brindarle a cada cliente una experiencia única,
+          en un entorno que inspira tranquilidad y armonía.
+        </p>
+        <p>
+          Nuestras instalaciones pueden adaptarse a todo 
+          tipo de celebraciones: 
+          desde bodas y aniversarios, hasta reuniones familiares,
+          corporativas y eventos sociales. Rodeada de paisajes 
+          inigualables, Finca Los 6 Potrillos ofrece un ambiente 
+          natural y sofisticado que convierte cada momento en
+          algo especial.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
